; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_avr32dci.c_avr32dci_root_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_avr32dci.c_avr32dci_root_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.avr32dci_softc = type { i32*, i32 }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@MA_OWNED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.avr32dci_softc*)* @avr32dci_root_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avr32dci_root_intr(%struct.avr32dci_softc* %0) #0 {
  %2 = alloca %struct.avr32dci_softc*, align 8
  store %struct.avr32dci_softc* %0, %struct.avr32dci_softc** %2, align 8
  %3 = call i32 @DPRINTFN(i32 9, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %4 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %2, align 8
  %5 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %4, i32 0, i32 1
  %6 = load i32, i32* @MA_OWNED, align 4
  %7 = call i32 @USB_BUS_LOCK_ASSERT(i32* %5, i32 %6)
  %8 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %2, align 8
  %9 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 2, i32* %11, align 4
  %12 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %2, align 8
  %13 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %12, i32 0, i32 1
  %14 = load %struct.avr32dci_softc*, %struct.avr32dci_softc** %2, align 8
  %15 = getelementptr inbounds %struct.avr32dci_softc, %struct.avr32dci_softc* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @uhub_root_intr(i32* %13, i32* %16, i32 8)
  ret void
}

declare dso_local i32 @DPRINTFN(i32, i8*) #1

declare dso_local i32 @USB_BUS_LOCK_ASSERT(i32*, i32) #1

declare dso_local i32 @uhub_root_intr(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
